@@ -195,7 +195,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       template<typename _Del = _Dp, typename = _DeleterConstraint<_Del>>
 	constexpr unique_ptr() noexcept
 	: _M_t()
-        { }
+	{ }
 
       /** Takes ownership of a pointer.
        *
@@ -244,7 +244,9 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       /// Creates a unique_ptr that owns nothing.
       template<typename _Del = _Dp, typename = _DeleterConstraint<_Del>>
-	constexpr unique_ptr(nullptr_t) noexcept : unique_ptr() { }
+	constexpr unique_ptr(nullptr_t) noexcept
+	: _M_t()
+	{ }
 
       // Move constructors.
 
@@ -472,7 +474,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       template<typename _Del = _Dp, typename = _DeleterConstraint<_Del>>
 	constexpr unique_ptr() noexcept
 	: _M_t()
-        { }
+	{ }
 
       /** Takes ownership of a pointer.
        *
@@ -535,7 +537,9 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       /// Creates a unique_ptr that owns nothing.
       template<typename _Del = _Dp, typename = _DeleterConstraint<_Del>>
-	constexpr unique_ptr(nullptr_t) noexcept : unique_ptr() { }
+	constexpr unique_ptr(nullptr_t) noexcept
+	: _M_t()
+        { }
 
       template<typename _Up, typename _Ep,
 	       typename = _Require<__safe_conversion_up<_Up, _Ep>>>
